# csskit

./: .csswg-drafts-sha  .gitignore  .gitmodules  .mise.toml  CHANGELOG.md  Cargo.toml
.github/actions/setup/: action.yml
.github/workflows/: bench.yml  benchmark-tracking.yml  pages.yml  release.yml  test.yml  vscode-release.yml
.mise-tasks/: csskit-acceptance  release-automation
.mise-tasks/.benchmark-compare/: package-lock.json  package.json
coverage/basic/: units.min.css
coverage/popular/: 960.find.1.txt  animate.4.1.1.find.3.txt  blueprint.1.0.1.find.1.txt  bootstrap.4.6.2.find.1.txt  bootstrap.5.3.0.find.1.txt  bootstrap.5.3.0.min.css  font-awesome-all.5.15.4.find.1.txt  foundation.6.7.5.find.1.txt  foundation.6.7.5.min.css  inuitcss.6.0.0.find.1.txt  mini.css.3.0.1.find.1.txt  missing.1.2.0.find.1.txt  pure.2.0.3.find.1.txt  reset.2.0.find.3.txt  sakura.1.5.1.find.5.txt
crates/chromashift/src/: channels.rs  color_space.rs  conversion.rs  display_p3.rs  gamut.rs  lib.rs  mix.rs  round.rs  tests.rs
crates/css_ast/: build.rs
crates/css_ast/src/: constraints.rs  css_atom_set.rs  lib.rs  metadata.rs  property_atoms.rs  specificity.rs  (+2 more)
crates/css_lexer/: Cargo.toml
crates/css_lexer/src/: associated_whitespace_rules.rs  constants.rs  cursor.rs  feature.rs  kind.rs  kindset.rs  private.rs  source_cursor.rs  span.rs  token.rs
crates/css_lexer/src/syntax/: mod.rs  tables.rs
crates/css_lexer/tests/: tests.rs
crates/css_lexer/tests/snapshots/: popular_snapshots__bootstrap.5.3.0.min.snap  popular_snapshots__foundation.6.7.5.min.snap
crates/csskit_ast/: build.rs
crates/csskit_derives/: Cargo.toml
crates/csskit_derives/src/: attributes.rs  css_feature.rs  darling_ext.rs  declaration_metadata.rs  field_view.rs  into_cursor.rs  lib.rs  node_with_metadata.rs  parse.rs  peek.rs  semantic_eq.rs  to_cursors.rs  to_span.rs  visitable.rs  where_collector.rs
crates/csskit_derives/src/test/: mod.rs  test_parse.rs  test_peek.rs  test_semantic_eq.rs  test_to_cursors.rs  test_to_span.rs  test_visitable.rs
crates/csskit_derives/src/test/snapshots/: csskit_derives__test__test_parse__parse_enum_all_must_occur_non_atom_only_input.snap  csskit_derives__test__test_parse__parse_enum_all_must_occur_overlapping_lead_atoms.snap  csskit_derives__test__test_parse__parse_enum_nested_generics.snap  csskit_derives__test__test_parse__parse_enum_one_must_occur_non_ident_atom_field.snap  csskit_derives__test__test_parse__parse_enum_one_must_occur_siblings_no_shared_atoms.snap  csskit_derives__test__test_parse__parse_enum_one_must_occur_variant_mixed_atom_and_type_fields.snap  csskit_derives__test__test_parse__parse_enum_struct_and_tuple_mixed.snap  csskit_derives__test__test_parse__parse_enum_struct_variant_one_must_occur.snap  csskit_derives__test__test_parse__parse_enum_struct_variants_one_must_occur_siblings.snap  csskit_derives__test__test_parse__parse_enum_variant_all_must_occur_with_keyword.snap  csskit_derives__test__test_parse__parse_enum_variant_all_must_occur_with_optional_fields.snap  csskit_derives__test__test_parse__parse_enum_variant_discriminated_by_second_field_atom.snap  csskit_derives__test__test_parse__parse_enum_variant_with_all_must_occur.snap  csskit_derives__test__test_parse__parse_enum_variant_with_keyword_pattern.snap  csskit_derives__test__test_parse__parse_enum_variant_with_keyword_variants.snap  csskit_derives__test__test_parse__parse_enum_variant_with_keyword_variants_or_type.snap  csskit_derives__test__test_parse__parse_enum_with_fields.snap  csskit_derives__test__test_parse__parse_enum_with_lifetime.snap  csskit_derives__test__test_parse__parse_enum_with_struct_variants.snap  csskit_derives__test__test_parse__parse_sequential_optional_keyword.snap  csskit_derives__test__test_parse__parse_simple_enum.snap  csskit_derives__test__test_parse__parse_single_field_tuple_struct.snap  csskit_derives__test__test_parse__parse_struct_all_must_occur_with_newtype_keyword.snap  csskit_derives__test__test_parse__parse_struct_all_must_occur_with_optional_fields.snap  csskit_derives__test__test_parse__parse_struct_with_different_keyword_variants.snap  csskit_derives__test__test_parse__parse_struct_with_optional_keywords.snap  csskit_derives__test__test_parse__parse_tuple_struct.snap  csskit_derives__test__test_parse__parse_tuple_struct_with_generics.snap  csskit_derives__test__test_peek__peek_enum_struct_variant_one_must_occur.snap  csskit_derives__test__test_peek__peek_enum_variant_one_must_occur_distinct_types.snap  csskit_derives__test__test_peek__peek_enum_with_different_types.snap  csskit_derives__test__test_peek__peek_enum_with_duplicate_types.snap  csskit_derives__test__test_peek__peek_enum_with_lifetime.snap  csskit_derives__test__test_peek__peek_enum_with_multiple_identical_types.snap  csskit_derives__test__test_peek__peek_enum_with_option_variants.snap  csskit_derives__test__test_peek__peek_enum_with_struct_variants.snap  csskit_derives__test__test_peek__peek_simple_enum.snap  csskit_derives__test__test_peek__peek_simple_struct.snap  csskit_derives__test__test_peek__peek_struct_all_must_occur.snap  csskit_derives__test__test_peek__peek_struct_with_lifetime.snap  (+22 more)
crates/csskit_proc_macro/: type_renames.toml
crates/csskit_spec_generator/: external_props.toml  extra_property_atoms.toml  ignore_properties.toml  todo_properties.toml  value_extensions.toml  value_replacements.toml
crates/csskit_transform/: Cargo.toml
crates/csskit_transform/src/: css_minifier.rs  lib.rs  reduce_colors.rs  reduce_time_units.rs  reduce_urls.rs
crates/csskit_transform/tests/: css-minify-tests.rs
crates/csskit_transform/tests/snapshots/: css_minify_tests__css_minify_failures.snap
crates/csskit_wasm/: Cargo.toml
crates/csskit_wasm/pkg/: package.json
crates/csskit_wasm/src/: lib.rs
website/: .eleventy.js  404.md  benchmarks.md  eleventy.config.js  index.html  package-lock.json  package.json  postcss.config.js
website/_includes/: header.html  sidebar.html
website/css/: base.css  benchmarks.css  index.css
website/docs/: what.md
website/script/: benchmarks.js
(+385 files in other folders)
