[package]
name = "csskit_derives"
version.workspace = true
authors.workspace = true
description = "Derive macros for CSS parsing, visiting, and AST operations."
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[lib]
bench = false
proc-macro = true

[dependencies]
syn = { workspace = true, features = ["extra-traits", "full", "visit"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }
itertools = { workspace = true }
heck = { workspace = true }
darling = { workspace = true }
synstructure.workspace = true

[dev-dependencies]
prettyplease = { workspace = true }
insta = { workspace = true, features = ["json"] }

[features]
default = []
