[package]
name = "csskit_transform"
version.workspace = true
authors.workspace = true
description = "AST transformation and minification utilities for CSS."
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[lib]
bench = false

[dependencies]
css_ast = { workspace = true, features = ["visitable", "chromashift"] }
css_parse = { workspace = true }
css_lexer = { workspace = true }
bumpalo = { workspace = true }
bitmask-enum = { workspace = true }
chromashift = { workspace = true }

[dev-dependencies]
glob = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
similar = { workspace = true }
console = { workspace = true }
criterion = { workspace = true, features = ["html_reports"] }

[target.'cfg(target_family = "unix")'.dev-dependencies]
pprof = { workspace = true, features = ["flamegraph", "criterion"] }

[features]
default = []

[[bench]]
name = "minify_popular"
harness = false
