[package]
name = "csskit_wasm"
version.workspace = true
publish = false
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true

[lib]
bench = false
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "serde", "fancy"]
console_error_panic_hook = ["dep:console_error_panic_hook", "dep:web-sys"]
serde = ["css_lexer/serde", "css_ast/serde", "css_parse/serde", "bumpalo/serde"]
miette = ["css_parse/miette", "css_ast/miette"]
fancy = ["miette", "miette/fancy-no-syscall"]

[dependencies]
css_lexer = { workspace = true } # @release
css_ast = { workspace = true, features = ["visitable"] } # @release
css_parse = { workspace = true } # @release
csskit_transform = { workspace = true } # @release

bumpalo = { workspace = true }
miette = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }

wasm-bindgen = { workspace = true }
serde-wasm-bindgen = { workspace = true }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { workspace = true, optional = true }
web-sys = { version = "0.3", features = ["console"], optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.54"

